--- a/apps/courses/templates/courses/index.html
+++ b/apps/courses/templates/courses/index.html
@@ -49,7 +49,7 @@
                                     <td>{{ course.name }}</td>
                                     <td>{{ course.desc }}</td>
                                     <td>{{ course.created_at }}</td>
-                                    <td><a href="/courses/destroy/{{course.id}}">Delete</a></td>
+                                    <td><a href="/destroy/{{course.id}}">Delete</a></td>
                                 </tr>
                             {% endfor %}
                         {% endif %}
